# graphics

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: camera.h  shader.h
proj/raytracing/: Makefile
proj/raytracing/include/: randomizer.hpp
proj/raytracing/include/materials/: dielectric.hpp
proj/raytracing/include/shapes/: box.hpp  plane.hpp
proj/raytracing/src/: main.cpp
proj/raytracing/src/materials/: metal.cpp
proj/raytracing/src/objects/: camera.cpp  color.cpp  hit_record.cpp  ray.cpp  vec3.cpp
proj/raytracing/src/shapes/: sphere.cpp
src/: flag.cpp  main.cpp  ngon.cpp  pacman.cpp
src/grader/: ccw_convex_area.cpp  cp_centroid.cpp  galaxy_wiz.cpp
src/handler/: initializer.hpp  shader.hpp
src/shader/: cube.frag  cube.vert  flag.glsl  vertex_shader.glsl
